Меняет текст на главной странице

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </section>
 
     <footer class="page-footer">
-      Контакты в подвале
+      Контакты тел. 8-968-444-03-56 email: semenoff2015@icloud.com
     </footer>
   </body>
 </html>
