Загружает файлы сайты

--- a/index.html
+++ b/index.html
@@ -2,18 +2,24 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="outlines.css">
+    <link rel="stylesheet" href="style.css">
     <title>Портфолио Junior верстальщика</title>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700|Old+Standard+TT&display=swap&subset=cyrillic" rel="stylesheet">
+
   </head>
 
   <body>
     <header class="page-header">
+      <div class="container">
      Контакты тел. 8-968-444-03-56 email: semenoff2015@icloud.com
+      </div>
     </header>
 
     <section class="hero-image">
+      <div class="container">
       <h1 class="heading">Семенов Егор Константинович</h1>
       <p>Junior верстальщик</p>
+      </div>
     </section>
 
     <section class="intro">
